--- a/components/navigation.html
+++ b/components/navigation.html
@@ -49,7 +49,7 @@
       <div data-type="MobileMenu" class="mobile-menu">
         <div class="navigation-nav1">
           <div class="navigation-container">
-            <img alt="image" src="public/playground_assets/logo1-1500h.png" />
+            <img alt="image" />
             <div
               data-type="CloseMobileMenu"
               class="navigation-close-mobile-menu"
