--- a/home.css
+++ b/home.css
@@ -78,16 +78,15 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   padding-right: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-twounits);
-  justify-content: space-between;
-}
-.navigation-image {
-  width: var(--dl-size-size-medium);
+  justify-content: flex-end;
 }
 .navigation-nav {
   flex: 0 0 auto;
   display: flex;
+  align-self: flex-end;
   align-items: center;
   flex-direction: row;
+  justify-content: flex-end;
 }
 .navigation-register {
   color: #F9EDD7;
