--- a/components/navigation.html
+++ b/components/navigation.html
@@ -41,10 +41,15 @@
           ></path>
         </svg>
       </div>
-      <div data-type="MobileMenu" class="mobile-menu">
+      <div data-type="MobileMenu" class="navigation-mobile-menu mobile-menu">
         <div class="navigation-nav1">
           <div class="navigation-container">
-            <img alt="image" />
+            <img
+              alt="image"
+              src="public/playground_assets/logo-getzke-transparent-1500h.png"
+              loading="lazy"
+              class="navigation-image"
+            />
             <div
               data-type="CloseMobileMenu"
               class="navigation-close-mobile-menu"
@@ -80,9 +85,14 @@
               <span>Akun Anda</span>
             </a>
           </nav>
-          <button class="button-secondary button button-md">
-            <span>Get in touch</span>
-          </button>
+          <a
+            href="https://getzke.id/store"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="navigation-register1 button-secondary button button-md"
+          >
+            <span>STORE</span>
+          </a>
         </div>
       </div>
     </div>
