Commit from TeleportHQ

--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -1,24 +1,37 @@
 <div>
   <link href="./navigation-links.css" rel="stylesheet" />
   <nav class="navigation-links-nav">
-    <a href="https://getzke.id" class="navigation-links-link navigation-Link">
+    <a
+      href="https://getzke.id/home/"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link navigation-Link"
+    >
       <span>Home</span>
     </a>
     <a
-      href="https://getzke.id/pesanan/"
+      href="https://getzke.id/cart-2/"
       target="_blank"
       rel="noreferrer noopener"
       class="navigation-links-link1 navigation-Link"
     >
-      <span>Pesanan</span>
+      <span>Keranjang</span>
     </a>
     <a
-      href="https://getzke.id/my-account/edit-account/"
+      href="https://getzke.id/account/"
       target="_blank"
       rel="noreferrer noopener"
       class="navigation-links-link2 navigation-Link"
     >
       <span>Akun Anda</span>
+    </a>
+    <a
+      href="https://getzke.id/contact-us/"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link3 navigation-Link"
+    >
+      <span>Kontak</span>
     </a>
   </nav>
 </div>
