--- a/components/navigation.html
+++ b/components/navigation.html
@@ -5,33 +5,45 @@
       <div class="navigation-nav">
         <nav class="navigation-links-nav navigation-links-root-class-name17">
           <a
-            href="https://getzke.id"
+            href="https://getzke.id/home/"
+            target="_blank"
+            rel="noreferrer noopener"
             class="navigation-links-link navigation-Link"
           >
             <span>Home</span>
           </a>
           <a
-            href="https://getzke.id/pesanan/"
+            href="https://getzke.id/cart-2/"
             target="_blank"
             rel="noreferrer noopener"
             class="navigation-links-link1 navigation-Link"
           >
-            <span>Pesanan</span>
+            <span>Keranjang</span>
           </a>
           <a
-            href="https://getzke.id/my-account/edit-account/"
+            href="https://getzke.id/account/"
             target="_blank"
             rel="noreferrer noopener"
             class="navigation-links-link2 navigation-Link"
           >
             <span>Akun Anda</span>
           </a>
+          <a
+            href="https://getzke.id/contact-us/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="navigation-links-link3 navigation-Link"
+          >
+            <span>Kontak</span>
+          </a>
         </nav>
         <a
-          href="https://getzke.id/store"
+          href="https://getzke.id/shop-2/"
+          target="_blank"
+          rel="noreferrer noopener"
           class="navigation-register button-secondary button button-md"
         >
-          <span>STORE</span>
+          <span>SHOP</span>
         </a>
       </div>
       <div data-type="BurgerMenu" class="navigation-burger-menu">
@@ -63,35 +75,45 @@
           </div>
           <nav class="navigation-links-nav navigation-links-root-class-name18">
             <a
-              href="https://getzke.id"
+              href="https://getzke.id/home/"
+              target="_blank"
+              rel="noreferrer noopener"
               class="navigation-links-link navigation-Link"
             >
               <span>Home</span>
             </a>
             <a
-              href="https://getzke.id/pesanan/"
+              href="https://getzke.id/cart-2/"
               target="_blank"
               rel="noreferrer noopener"
               class="navigation-links-link1 navigation-Link"
             >
-              <span>Pesanan</span>
+              <span>Keranjang</span>
             </a>
             <a
-              href="https://getzke.id/my-account/edit-account/"
+              href="https://getzke.id/account/"
               target="_blank"
               rel="noreferrer noopener"
               class="navigation-links-link2 navigation-Link"
             >
               <span>Akun Anda</span>
             </a>
+            <a
+              href="https://getzke.id/contact-us/"
+              target="_blank"
+              rel="noreferrer noopener"
+              class="navigation-links-link3 navigation-Link"
+            >
+              <span>Kontak</span>
+            </a>
           </nav>
           <a
-            href="https://getzke.id/store"
+            href="https://getzke.id/shop-2/"
             target="_blank"
             rel="noreferrer noopener"
             class="navigation-register1 button-secondary button button-md"
           >
-            <span>STORE</span>
+            <span>SHOP</span>
           </a>
         </div>
       </div>
