--- a/components/navigation.css
+++ b/components/navigation.css
@@ -33,6 +33,17 @@
 .navigation-links-link2:hover {
   color: var(--dl-color-scheme-brown);
 }
+.navigation-links-link3 {
+  color: #F9EDD7;
+  cursor: pointer;
+  text-align: left;
+  transition: 0.3s;
+  margin-left: 41px;
+  text-decoration: none;
+}
+.navigation-links-link3:hover {
+  color: var(--dl-color-scheme-brown);
+}
 
 
 
@@ -54,6 +65,10 @@
     margin-bottom: var(--dl-space-space-unit);
   }
   .navigation-links-link2 {
+    margin-left: 0;
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .navigation-links-link3 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
