--- a/src/components/portofolio-card.css
+++ b/src/components/portofolio-card.css
@@ -1,8 +1,10 @@
 .portofolio-card-speaker-card {
+  width: var(--dl-size-size-medium);
   display: flex;
   position: relative;
-  align-items: flex-start;
+  align-items: stretch;
   flex-direction: column;
+  justify-content: space-between;
 }
 .portofolio-card-image-container {
   width: 100%;
@@ -23,39 +25,33 @@
   top: 0px;
   left: 0px;
   right: 0px;
-  width: 100%;
+  width: var(--dl-size-size-medium);
   bottom: 0px;
-  height: 100%;
+  height: var(--dl-size-size-medium);
   margin: auto;
   position: absolute;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
-.portofolio-card-see-project-container {
-  flex: 1;
-  width: 100%;
-  cursor: pointer;
-  display: flex;
-  opacity: 0;
-  z-index: 1;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(.jpg);
-  transition: 0.3s;
-  align-items: center;
-  border-radius: var(--dl-radius-radius-radius8);
-  flex-direction: row;
-  justify-content: center;
-}
-.portofolio-card-see-project-container:hover {
-  opacity: 1;
-}
 .portofolio-card-first-name {
   color: #F9EDD7;
-  font-size: 18px;
+  font-size: 16px;
   align-self: center;
   font-style: normal;
-  font-weight: 700;
-  line-height: 23px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 
-
+@media(max-width: 991px) {
+  .portofolio-card-speaker-card {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .portofolio-card-root-class-name4 {
+    width: auto;
+  }
+  .portofolio-card-root-class-name5 {
+    width: auto;
+  }
+}
